sizeof uses AExpressionTranslation